--- a/index.html
+++ b/index.html
@@ -17,41 +17,34 @@
   <body>
     <div class="wrapper">
       <div class="maincontent">
-        <section class="section section__full-screen section-welcome" style="background-image:url(assets/img/main-bg.jpg);"><a class="button button-action-auth" href="#">Авторизоваться</a>
+        <section class="section section__full-screen section-welcome" style="background-image:url(assets/img/main-bg.jpg);">
+          <button class="button welcome__button"><span class="button__text">Авторизоваться</span></button>
           <div class="login-box login-box__welcome">
-            <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div>
-            <div class="login-box__name login-box__name_welcome">Андрей Секачев</div>
-            <div class="login-box__descr login-box__descr_welcome">Личный сайт веб разработчика</div>
-            <div class="socials">
-              <ul class="socials__list">
-                <li class="socials__item socials__item_welcome"><a class="socials__link socials__link_vk" href="#">
-                        <svg class="socials__icon socials__icon_welcome">
-                          <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
-                        </svg></a></li>
-                <li class="socials__item socials__item_welcome"><a class="socials__link socials__link_git" href="#">
-                        <svg class="socials__icon socials__icon_welcome">
-                          <use xlink:href="assets/img/sprite/sprite.svg#github"></use>
-                        </svg></a></li>
-                <li class="socials__item socials__item_welcome"><a class="socials__link socials__link_in" href="#">
-                        <svg class="socials__icon socials__icon_welcome">
-                          <use xlink:href="assets/img/sprite/sprite.svg#in"></use>
-                        </svg></a></li>
-              </ul>
-            </div>
-            <nav class="navigation navigation_location_welcome">
-              <ul class="navigation_location_welcome__list">
-                <li class="navigation_location_welcome__item"><a class="navigation_location_welcome__link" href="works.html">Мои работы</a></li>
-                <li class="navigation_location_welcome__item"><a class="navigation_location_welcome__link" href="about.html">Обо мне</a></li>
-                <li class="navigation_location_welcome__item"><a class="navigation_location_welcome__link" href="blog.html">Блог</a></li>
+            <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title login-box__title_28px">Андрей Секачев</span><span class="login-box__subtitle">Личный сайт веб разработчика</span>
+            <ul class="socials__list socials__list_margin-b_36px">
+              <li class="socials__item"><a class="socials__link" href="#">
+                      <svg class="socials__icon socials__icon_color_cyan">
+                        <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
+                      </svg></a></li>
+              <li class="socials__item"><a class="socials__link" href="#">
+                      <svg class="socials__icon socials__icon_color_cyan">
+                        <use xlink:href="assets/img/sprite/sprite.svg#github"></use>
+                      </svg></a></li>
+              <li class="socials__item"><a class="socials__link" href="#">
+                      <svg class="socials__icon socials__icon_color_cyan">
+                        <use xlink:href="assets/img/sprite/sprite.svg#in"></use>
+                      </svg></a></li>
+            </ul>
+            <nav class="navigation">
+              <ul class="navigation__list">
+                <li class="navigation__item"><a class="navigation__link" href="works.html">Мои работы</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="about.html">Обо мне</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="blog.html">Блог</a></li>
               </ul>
             </nav>
           </div>
         </section>
-        <footer class="footer footer__welcome">
-          <div class="footer__text_welcome">
-            <div class="copyright">© Андрей Секачев | создано с любовью в LoftSchool       </div>
-          </div>
-        </footer>
+        <footer class="footer welcome__footer"><span class="footer__copyright">© Андрей Секачев | создано с любовью в LoftSchool       </span></footer>
       </div>
     </div>
   </body>
