--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <div class="maincontent">
-        <header class="header blog__header">
+        <header class="header header_blog">
           <div class="header__top-line header__top-line_width_80">
             <ul class="socials__list">
               <li class="socials__item socials__item_header"><a class="socials__link_header" href="#">
@@ -47,7 +47,7 @@
             <polygon class="triangles_fill_white" points="1000,0   1000,100   500,100   500,90"></polygon>
           </svg>
         </header>
-        <section class="section__blog">
+        <section class="section_blog">
           <aside class="aside aside_width_20">
             <nav class="nav__blog">
               <ul class="aside__list">
@@ -78,7 +78,7 @@
             </article>
           </section>
         </section>
-        <footer class="footer__blog">
+        <footer class="footer_blog">
           <div class="footer__row">
             <nav class="footer__nav">
               <ul class="footer__list">
