--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
   <body>
     <div class="wrapper">
       <div class="maincontent">
-        <section class="section section__full-screen section-welcome" style="background-image:url(assets/img/main-bg.jpg);">
-          <button class="button welcome__button"><span class="button__text">Авторизоваться</span></button>
+        <section class="welcome section_height_100vh">
+          <button class="button button_pos_absolute"><span class="text_color_white">Авторизоваться</span></button>
           <div class="login-box login-box__welcome">
-            <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title login-box__title_28px">Андрей Секачев</span><span class="login-box__subtitle">Личный сайт веб разработчика</span>
-            <ul class="socials__list socials__list_margin-b_36px">
+            <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title text_size_28">Андрей Секачев</span><span class="login-box__subtitle">Личный сайт веб разработчика</span>
+            <ul class="socials login-box__socials socials_color_cyan">
               <li class="socials__item"><a class="socials__link" href="#">
-                      <svg class="socials__icon socials__icon_color_cyan">
+                      <svg class="socials__icon">
                         <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
                       </svg></a></li>
               <li class="socials__item"><a class="socials__link" href="#">
-                      <svg class="socials__icon socials__icon_color_cyan">
+                      <svg class="socials__icon">
                         <use xlink:href="assets/img/sprite/sprite.svg#github"></use>
                       </svg></a></li>
               <li class="socials__item"><a class="socials__link" href="#">
-                      <svg class="socials__icon socials__icon_color_cyan">
+                      <svg class="socials__icon">
                         <use xlink:href="assets/img/sprite/sprite.svg#in"></use>
                       </svg></a></li>
             </ul>
             <nav class="navigation">
               <ul class="navigation__list">
-                <li class="navigation__item"><a class="navigation__link" href="works.html">Мои работы</a></li>
-                <li class="navigation__item"><a class="navigation__link" href="about.html">Обо мне</a></li>
-                <li class="navigation__item"><a class="navigation__link" href="blog.html">Блог</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="works.html"><span class="text_color_white">Мои работы</span></a></li>
+                <li class="navigation__item"><a class="navigation__link" href="about.html"><span class="text_color_white">Обо мне</span></a></li>
+                <li class="navigation__item"><a class="navigation__link" href="blog.html"><span class="text_color_white">Блог</span></a></li>
               </ul>
             </nav>
           </div>
