--- a/works.html
+++ b/works.html
@@ -19,17 +19,17 @@
       <div class="maincontent">
         <header class="header">
           <div class="header__top-line">
-            <ul class="socials__list">
-              <li class="socials__item socials__item_header"><a class="socials__link_header" href="#">
-                          <svg class="socials__icon socials__icon_header">
+            <ul class="socials text_color_rgba-white">
+              <li class="socials__item"><a class="socials__link" href="#">
+                          <svg class="socials__icon">
                             <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
                           </svg></a></li>
-              <li class="socials__item socials__item_header"><a class="socials__link_header" href="#">
-                          <svg class="socials__icon socials__icon_header">
+              <li class="socials__item"><a class="socials__link" href="#">
+                          <svg class="socials__icon">
                             <use xlink:href="assets/img/sprite/sprite.svg#github"></use>
                           </svg></a></li>
-              <li class="socials__item socials__item_header"><a class="socials__link_header" href="#">
-                          <svg class="socials__icon socials__icon_header">
+              <li class="socials__item"><a class="socials__link" href="#">
+                          <svg class="socials__icon">
                             <use xlink:href="assets/img/sprite/sprite.svg#in"></use>
                           </svg></a></li>
             </ul>
@@ -45,32 +45,32 @@
                       <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
                     </svg></a>
           <svg class="triangles triangles_pos_absolute" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 100" preserveAspectRatio="none">
-            <polygon class="triangles_fill_white" points="0,0 0,100 500,100 500,90"></polygon>
-            <polygon class="triangles_fill_white" points="1000,0   1000,100   500,100   500,90"></polygon>
+            <polygon class="triangles_fill_grey" points="0,0 0,100 500,100 500,90"></polygon>
+            <polygon class="triangles_fill_beige" points="1000,0   1000,100   500,100   500,90"></polygon>
           </svg>
         </header>
-        <section class="section section__works">
-          <div class="title title_font_63px title_align_center"><span class="title__text title__text_line-height_184px">Мои работы</span></div>
-          <div class="works__slider">
-            <div class="works__slider_width_50">
-              <div class="title subtitle_font_35px title_align_center"><span class="title__text title__text_margin-b_30px">Сайт школы онлайн<br> образования</span></div>
+        <section class="section section_works">
+          <div class="my-works">
+            <div class="title text_font_63 text_align_center"><span class="title__text text_line-height_184">Мои работы</span></div>
+          </div>
+          <div class="slider">
+            <div class="slider__descr">
+              <div class="title text_font_35 title_align_center"><span class="title__text text_mb_30">Сайт школы онлайн<br> образования</span></div>
               <div class="cources"> <span class="cources__text">html, css, javascript</span></div><a class="button__link" href="#"> <span class="button__text">Посмотреть сайт</span></a>
             </div>
-            <div class="works__slider_width_50 works__slider_bgcolor_beige">
-              <div class="slider__image_size_big"><img class="slider_pic" src="assets/img/slider/work-1.png" alt="work-1"></div>
-              <div class="sliders__image_small">
-                <div class="slider__image_small_left"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-2.png" alt="work-2">
-                  <div class="header__arrow-scroll arrow-scroll"><a class="arrow-scroll__arrow arrow-scroll__link_works" href="#">
-                              <svg class="arrow-scroll__arrow_works">
-                                <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
-                              </svg></a></div>
-                </div>
-                <div class="slider__image_small_right"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-3.png" alt="work-3">
-                  <div class="header__arrow-scroll arrow-scroll"><a class="arrow-scroll__arrow arrow-scroll__link_works" href="#">
-                              <svg class="arrow-scroll__arrow_works arrow-scroll__arrow_works_up">
-                                <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
-                              </svg></a></div>
-                </div>
+            <div class="slider__image_size_big"><img class="slider_pic" src="assets/img/slider/work-1.png" alt="work-1"></div>
+            <div class="sliders__image_size_small">
+              <div class="slider__image_small_left"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-2.png" alt="work-2">
+                <div class="header__arrow-scroll arrow-scroll"><a class="arrow-scroll__arrow arrow-scroll__link_works" href="#">
+                            <svg class="arrow-scroll__arrow_works">
+                              <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
+                            </svg></a></div>
+              </div>
+              <div class="slider__image_small_right"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-3.png" alt="work-3">
+                <div class="header__arrow-scroll arrow-scroll"><a class="arrow-scroll__arrow arrow-scroll__link_works" href="#">
+                            <svg class="arrow-scroll__arrow_works arrow-scroll__arrow_works_up">
+                              <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
+                            </svg></a></div>
               </div>
             </div>
           </div>
