--- a/about.html
+++ b/about.html
@@ -20,16 +20,16 @@
         <header class="header">
           <div class="header__top-line">
             <ul class="socials text_color_rgba-white">
-              <li class="socials__item"><a class="socials__link" href="#">
-                          <svg class="socials__icon">
+              <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
+                          <svg class="socials__icon socials__icon_header">
                             <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
                           </svg></a></li>
-              <li class="socials__item"><a class="socials__link" href="#">
-                          <svg class="socials__icon">
+              <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
+                          <svg class="socials__icon socials__icon_header">
                             <use xlink:href="assets/img/sprite/sprite.svg#github"></use>
                           </svg></a></li>
-              <li class="socials__item"><a class="socials__link" href="#">
-                          <svg class="socials__icon">
+              <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
+                          <svg class="socials__icon socials__icon_header">
                             <use xlink:href="assets/img/sprite/sprite.svg#in"></use>
                           </svg></a></li>
             </ul>
@@ -40,8 +40,8 @@
           <div class="header__title_transparent"><img src="assets/img/portfolio_header_bg.png" alt="portfolio header"></div>
           <div class="login-box login-box__bg_transparent">
             <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title_35px">Андрей Секачев</span><span class="login-box__subtitle_header">Личный сайт веб разработчика</span>
-          </div><a class="arrow-scroll__down" href="#">
-                    <svg class="arrow-scroll__arrow_header">
+          </div><a class="arrow-scroll_header_down" href="#">
+                    <svg class="arrow-scroll_header">
                       <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
                     </svg></a>
           <svg class="triangles triangles_pos_absolute" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 100" preserveAspectRatio="none">
@@ -218,17 +218,17 @@
                   <li class="footer__item"><a class="footer__link" href="#">Авторизация</a></li>
                 </ul>
               </nav>
-              <div class="footer__socials social-view-circle">
-                <ul class="socials">
-                  <li class="socials__item"><a class="socials__link socials__link_footer socials__link_vk" href="#">
+              <div class="footer__socials">
+                <ul class="socials social_view_circle">
+                  <li class="socials__item"><a class="socials__link socials__link_footer" href="#">
                               <svg class="socials__icon socials__icon_footer">
                                 <use xlink:href="assets/img/sprite/sprite.svg#vk_round"></use>
                               </svg></a></li>
-                  <li class="socials__item"><a class="socials__link socials__link_footer socials__link_git" href="#">
+                  <li class="socials__item"><a class="socials__link socials__link_footer" href="#">
                               <svg class="socials__icon socials__icon_footer">
                                 <use xlink:href="assets/img/sprite/sprite.svg#github_round"></use>
                               </svg></a></li>
-                  <li class="socials__item"><a class="socials__link socials__link_footer socials__link_in" href="#">
+                  <li class="socials__item"><a class="socials__link socials__link_footer" href="#">
                               <svg class="socials__icon socials__icon_footer">
                                 <use xlink:href="assets/img/sprite/sprite.svg#in_round"></use>
                               </svg></a></li>
