--- a/works.html
+++ b/works.html
@@ -20,16 +20,16 @@
         <header class="header">
           <div class="header__top-line">
             <ul class="socials text_color_rgba-white">
-              <li class="socials__item"><a class="socials__link" href="#">
-                          <svg class="socials__icon">
+              <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
+                          <svg class="socials__icon socials__icon_header">
                             <use xlink:href="assets/img/sprite/sprite.svg#vk"></use>
                           </svg></a></li>
-              <li class="socials__item"><a class="socials__link" href="#">
-                          <svg class="socials__icon">
+              <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
+                          <svg class="socials__icon socials__icon_header">
                             <use xlink:href="assets/img/sprite/sprite.svg#github"></use>
                           </svg></a></li>
-              <li class="socials__item"><a class="socials__link" href="#">
-                          <svg class="socials__icon">
+              <li class="socials__item social__item_header"><a class="socials__link socials__link_header" href="#">
+                          <svg class="socials__icon socials__icon_header">
                             <use xlink:href="assets/img/sprite/sprite.svg#in"></use>
                           </svg></a></li>
             </ul>
@@ -40,13 +40,13 @@
           <div class="header__title_transparent"><img src="assets/img/portfolio_header_bg.png" alt="portfolio header"></div>
           <div class="login-box login-box__bg_transparent">
             <div class="login-box__pic"><img class="login-box__pic-elem" src="assets/img/user.jpg" alt="user-photo"></div><span class="login-box__title_35px">Андрей Секачев</span><span class="login-box__subtitle_header">Личный сайт веб разработчика</span>
-          </div><a class="arrow-scroll__down" href="#">
-                    <svg class="arrow-scroll__arrow_header">
+          </div><a class="arrow-scroll_header_down" href="#">
+                    <svg class="arrow-scroll_header">
                       <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
                     </svg></a>
           <svg class="triangles triangles_pos_absolute" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 100" preserveAspectRatio="none">
-            <polygon class="triangles_fill_grey" points="0,0 0,100 500,100 500,90"></polygon>
-            <polygon class="triangles_fill_beige" points="1000,0   1000,100   500,100   500,90"></polygon>
+            <polygon class="triangles_fill_white" points="0,0 0,100 500,100 500,90"></polygon>
+            <polygon class="triangles_fill_white" points="1000,0   1000,100   500,100   500,90"></polygon>
           </svg>
         </header>
         <section class="section section_works">
@@ -54,32 +54,34 @@
             <div class="title text_font_63 text_align_center"><span class="title__text text_line-height_184">Мои работы</span></div>
           </div>
           <div class="slider">
-            <div class="slider__descr">
-              <div class="title text_font_35 title_align_center"><span class="title__text text_mb_30">Сайт школы онлайн<br> образования</span></div>
-              <div class="cources"> <span class="cources__text">html, css, javascript</span></div><a class="button__link" href="#"> <span class="button__text">Посмотреть сайт</span></a>
+            <div class="slider__descr block_width_50">
+              <div class="descrcription">
+                <div class="title text_font_35 text_align_center"><span class="title__text text_mb_30">Сайт школы онлайн<br> образования</span></div>
+                <div class="cources"> <span class="cources__text">html, css, javascript</span></div><a class="button_link" href="#"> <span class="text_color_white">Посмотреть сайт</span></a>
+              </div>
             </div>
-            <div class="slider__image_size_big"><img class="slider_pic" src="assets/img/slider/work-1.png" alt="work-1"></div>
-            <div class="sliders__image_size_small">
-              <div class="slider__image_small_left"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-2.png" alt="work-2">
-                <div class="header__arrow-scroll arrow-scroll"><a class="arrow-scroll__arrow arrow-scroll__link_works" href="#">
-                            <svg class="arrow-scroll__arrow_works">
-                              <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
+            <div class="slider__image_size_big block_width_50"><img class="slider_pic" src="assets/img/slider/work-1.png" alt="work-1"></div>
+            <div class="slider__image_size_small block_width_50">
+              <div class="slider__image_small"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-2.png" alt="work-2">
+                <div class="slider__arrow-scroll"><a class="arrow-scroll_down" href="#">
+                            <svg class="arrow-scroll__icon">
+                              <use xlink:href="assets/img/sprite/sprite.svg#portf_arrow_down"></use>
                             </svg></a></div>
               </div>
-              <div class="slider__image_small_right"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-3.png" alt="work-3">
-                <div class="header__arrow-scroll arrow-scroll"><a class="arrow-scroll__arrow arrow-scroll__link_works" href="#">
-                            <svg class="arrow-scroll__arrow_works arrow-scroll__arrow_works_up">
-                              <use xlink:href="assets/img/sprite/sprite.svg#arrow_down"></use>
+              <div class="slider__image_small"><img class="slider_pic slider_pic_small" src="assets/img/slider/work-3.png" alt="work-3">
+                <div class="slider__arrow-scroll"><a class="arrow-scroll_up" href="#">
+                            <svg class="arrow-scroll__icon">
+                              <use xlink:href="assets/img/sprite/sprite.svg#portf_arrow_up"></use>
                             </svg></a></div>
               </div>
             </div>
           </div>
         </section>
-        <div class="title title_font_63px title_align_center title__mb_15px"><span class="title__text">Что обо мне<br> говорят </span></div>
+        <div class="title text_font_63 text_align_center text__mb_15"><span class="title__text">Что обо мне<br> говорят </span></div>
         <section class="section section__feedback">     
           <ul class="feedback__list">
             <li class="feedback__item">
-              <div class="quotes quotes_align_left"><img class="quotes__icon" src="assets/img/icons/quotes.svg" alt="quotes icon"></div>
+              <div class="quotes"><img class="quotes__icon" src="assets/img/icons/quotes.svg" alt="quotes icon"></div>
               <div class="feedback__text">
                 <p>Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!</p>
               </div>
@@ -89,7 +91,7 @@
               </div>
             </li>
             <li class="feedback__item">
-              <div class="quotes quotes_align_left"><img class="quotes__icon" src="assets/img/icons/quotes.svg" alt="quotes icon"></div>
+              <div class="quotes"><img class="quotes__icon" src="assets/img/icons/quotes.svg" alt="quotes icon"></div>
               <div class="feedback__text">
                 <p>Этот код выдержит любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!</p>
               </div>
@@ -100,19 +102,19 @@
             </li>
           </ul>
           <div class="feedback__form">
-            <div class="title subtitle_font_35px"><span class="title__text">Связаться со мной</span></div>
+            <div class="title text_font_35"><span class="title__text">Связаться со мной</span></div>
             <form class="form">
               <div class="inputs__block">
                 <input class="input__item" type="text" placeholder="Имя">
                 <input class="input__item" type="email" placeholder="E-mail">
-                <textarea class="input__item input__item_min-height_140px" placeholder="Ваше сообщение"></textarea>
+                <textarea class="input__item input_min-height_140" placeholder="Ваше сообщение"></textarea>
               </div>
               <div class="form__buttons">
                 <input class="button__item" type="submit" value="Отправить">
                 <input class="button__item" type="reset" value="Очистить">
               </div>
             </form>
-          </div><a class="arrow-scroll__arrow arrow-scroll__up" href="#">
+          </div><a class="arrow-scroll_footer_up" href="#">
                     <svg class="arrow__up">
                       <use xlink:href="assets/img/sprite/sprite.svg#portf_arrow_up"></use>
                     </svg></a>
@@ -126,8 +128,8 @@
                   <li class="footer__item"><a class="footer__link" href="#">Авторизация</a></li>
                 </ul>
               </nav>
-              <div class="footer__socials social-view-circle">
-                <ul class="socials__list socials__list_margin_0">
+              <div class="footer__socials">
+                <ul class="socials social_view_circle">
                   <li class="socials__item"><a class="socials__link socials__link_footer socials__link_vk" href="#">
                               <svg class="socials__icon socials__icon_footer">
                                 <use xlink:href="assets/img/sprite/sprite.svg#vk_round"></use>
